feat: [PIDM-1421] Update unit tests